--- a/main/home/templates/home.html
+++ b/main/home/templates/home.html
@@ -67,69 +67,46 @@ home-style1
         </section>
         <!--  End popular cat  -->
         <!--  Start header  -->
+
         <section class="tc-header-style1">
           <div class="container">
             <div class="content">
               <div class="row">
+                <!-- اسلایدر اصلی -->
                 <div class="col-lg-8">
                   <div class="main-slider">
                     <div class="swiper-wrapper">
+                      {% for slide in main_slides %}
                       <div class="swiper-slide">
                         <div class="slide-card">
                           <div class="img th-450">
-                            <img
-                              alt=""
-                              class="img-cover"
-                              src="{% static 'img/head/head_1.png' %}"
+                            <img 
+                              alt="{{ slide.title }}"
+                              class="img-cover" 
+                              src="{{ slide.image.url }}"
                             />
                           </div>
                           <div class="info text-white">
                             <div class="cont">
                               <h2 class="fsz-35 fw-200">
-                                تلویزیون اندرویدی<br />40 اینچی
+                                {{ slide.title|linebreaksbr }}
                               </h2>
+                              {% if slide.subtitle %}
                               <p class="fsz-12 mt-15 text-uppercase">
-                                تلویزیون Android Full HD Full HD با دستیار
-                                Google
+                                {{ slide.subtitle }}
                               </p>
+                              {% endif %}
                               <a
                                 class="butn px-5 py-3 bg-blue1 text-white rounded-pill mt-60 fw-600"
-                                href="../pages/single_product.html"
+                                href="{{ slide.button_url }}"
                               >
-                                <span>اکنون خرید کنید</span>
+                                <span>{{ slide.button_text }}</span>
                               </a>
                             </div>
                           </div>
                         </div>
                       </div>
-                      <div class="swiper-slide">
-                        <div class="slide-card">
-                          <div class="img th-450">
-                            <img
-                              alt=""
-                              class="img-cover"
-                              src="{% static 'img/head/head_1.png' %}"
-                            />
-                          </div>
-                          <div class="info text-white">
-                            <div class="cont">
-                              <h2 class="fsz-35 fw-200">
-                                تلویزیون اندرویدی<br />40 اینچی
-                              </h2>
-                              <p class="fsz-12 mt-15 text-uppercase">
-                                تلویزیون Android Full HD Full HD با دستیار
-                                Google
-                              </p>
-                              <a
-                                class="butn px-5 py-3 bg-blue1 text-white rounded-pill mt-60 fw-600"
-                                href="../pages/single_product.html"
-                              >
-                                <span>اکنون خرید کنید</span>
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                      {% endfor %}
                     </div>
                     <div class="slider-controls">
                       <div class="swiper-button-prev"></div>
@@ -138,109 +115,123 @@ home-style1
                     </div>
                   </div>
                 </div>
+
+                <!-- کارت بزرگ سمت راست -->
+                {% with promo_cards.large.first as card %}
                 <div class="col-lg-4">
                   <div class="card-overlay card-center">
                     <div class="img th-450">
-                      <img
-                        alt=""
+                      <img 
+                        alt="{{ card.title }}"
                         class="img-cover"
-                        src="{% static 'img/head/head_2.png' %}"
+                        src="{{ card.image.url }}"
                       />
                     </div>
                     <div class="info text-white p-50">
                       <div class="cont">
-                        <h3 class="fsz-30">فن مرطوب کننده</h3>
-                        <p class="fsz-13 mt-1">از 299 تومان</p>
+                        <h3 class="fsz-30">{{ card.title }}</h3>
+                        {% if card.price_text %}
+                        <p class="fsz-13 mt-1">{{ card.price_text }}</p>
+                        {% endif %}
                       </div>
                       <a
                         class="butn px-5 py-3 bg-white color-000 rounded-pill fw-600"
-                        href="{% url 'products:product_list' %}"
+                        href="{{ card.button_url|default:'#' }}"
                       >
-                        <span>اکنون کشف کنید</span>
+                        <span>{{ card.button_text|default:'اکنون کشف کنید' }}</span>
                       </a>
                     </div>
                   </div>
                 </div>
+                {% endwith %}
+
+                <!-- کارت متوسط -->
+                {% with promo_cards.medium.first as card %}
                 <div class="col-lg-6">
-                  <div
-                    class="card-overlay wow fadeInUp slow"
-                    data-wow-delay="0.2s"
-                  >
+                  <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.2s">
                     <div class="img th-230">
-                      <img
-                        alt=""
+                      <img 
+                        alt="{{ card.title }}"
                         class="img-cover"
-                        src="{% static 'img/head/head_3.png' %}"
+                        src="{{ card.image.url }}"
                       />
                     </div>
                     <div class="info color-000 p-30">
                       <div class="cont">
-                        <h3 class="fsz-30">مینی<br />2022</h3>
-                        <p class="fsz-13 mt-1 color-666">
-                          قدرت مگا در اندازه کوچک
-                        </p>
+                        <h3 class="fsz-30">{{ card.title|linebreaksbr }}</h3>
+                        {% if card.subtitle %}
+                        <p class="fsz-13 mt-1 color-666">{{ card.subtitle }}</p>
+                        {% endif %}
                       </div>
                       <a
                         class="butn px-4 py-2 bg-dark text-white rounded-pill fw-600 fsz-12 mt-30"
-                        href="../pages/single_product.html"
+                        href="{{ card.button_url|default:'#' }}"
                       >
-                        <span>اکنون خرید کنید</span>
+                        <span>{{ card.button_text|default:'اکنون خرید کنید' }}</span>
                       </a>
                     </div>
                   </div>
                 </div>
+                {% endwith %}
+
+                <!-- کارت کوچک اول -->
+                {% with promo_cards.small.0 as card %}
                 <div class="col-lg-3">
-                  <div
-                    class="card-overlay wow fadeInUp slow"
-                    data-wow-delay="0.4s"
-                  >
+                  <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.4s">
                     <div class="img th-230">
-                      <img
-                        alt=""
+                      <img 
+                        alt="{{ card.title }}"
                         class="img-cover"
-                        src="{% static 'img/head/head_4.png' %}"
+                        src="{{ card.image.url }}"
                       />
                     </div>
                     <div class="info text-white p-30">
                       <div class="cont">
-                        <h6 class="fsz-20">تصفیه کننده <br />هوا</h6>
-                        <small
-                          class="fsz-10 color-999 d-block text-uppercase mt-2"
-                          >از</small
-                        >
-                        <p class="fsz-20 color-lightGreen">169 تومان</p>
+                        <h6 class="fsz-20">{{ card.title|linebreaksbr }}</h6>
+                        {% if card.price_text %}
+                        <small class="fsz-10 color-999 d-block text-uppercase mt-2">
+                          از
+                        </small>
+                        <p class="fsz-20 color-lightGreen">{{ card.price_text }}</p>
+                        {% endif %}
                       </div>
                     </div>
                   </div>
                 </div>
+                {% endwith %}
+
+                <!-- کارت کوچک دوم -->
+                {% with promo_cards.small.1 as card %}
                 <div class="col-lg-3">
-                  <div
-                    class="card-overlay wow fadeInUp slow"
-                    data-wow-delay="0.6s"
-                  >
+                  <div class="card-overlay wow fadeInUp slow" data-wow-delay="0.6s">
                     <div class="img th-230">
-                      <img
-                        alt=""
+                      <img 
+                        alt="{{ card.title }}"
                         class="img-cover"
-                        src="{% static 'img/head/head_5.png' %}"
+                        src="{{ card.image.url }}"
                       />
                     </div>
                     <div class="info text-white p-30">
                       <div class="cont">
-                        <small class="fsz-10 d-block text-uppercase mb-2"
-                          >ماشین لباسشویی</small
-                        >
-                        <h6 class="fsz-20">وابسته به آنتاتیک<br />حداکثر 2</h6>
+                        {% if card.subtitle %}
+                        <small class="fsz-10 d-block text-uppercase mb-2">
+                          {{ card.subtitle }}
+                        </small>
+                        {% endif %}
+                        <h6 class="fsz-20">{{ card.title|linebreaksbr }}</h6>
                       </div>
+                      {% if card.button_text %}
                       <a
                         class="butn px-4 py-2 bg-white color-000 rounded-pill fw-600 fsz-12 mt-50"
-                        href="../pages/single_product.html"
+                        href="{{ card.button_url|default:'#' }}"
                       >
-                        <span>اکنون خرید کنید</span>
+                        <span>{{ card.button_text }}</span>
                       </a>
+                      {% endif %}
                     </div>
                   </div>
                 </div>
+                {% endwith %}
               </div>
             </div>
           </div>
